--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,6 @@ crashlytics-build.properties
 !/.idea/.idea.*/.idea
 /.idea/.idea.*/.idea/*
 !/.idea/.idea.*/.idea/runConfigurations
+DUST/.idea/.idea.DUST/.idea/vcs.xml
+DUST/.idea/.idea.DUST/.idea/encodings.xml
+DUST/.idea/.idea.DUST/.idea/indexLayout.xml
